# LLM-Study

./: .gitignore  pyproject.toml
01_langchain_basic/: 01_langchain_basic.ipynb  01_openAI_llm.ipynb  02_langchain_lcel_basic.ipynb  03_langchain_lcel_basic_2.ipynb
02_prompt/: 01_prompt_basic.ipynb  02_chatpropt.ipynb  03_fewshote_chatpropt.ipynb  best_template.json  best_template.yaml
03_model/: 00_model.ipynb  01_claude.ipynb  01_gemini.ipynb
04_outputparser/: 01_str.ipynb  02_comma.ipynb  03_json.ipynb  04_pydantic.ipynb
05_memory/: 01_history_basic.ipynb  02_window_history.ipynb  03_conversation_history.ipynb  04_summary_history.ipynb  05_profile_history.ipynb  06_sqlite_history.ipynb  07_sqlite_history_conversation.ipynb  chat_history_1.db
06_loader_splitter/: 01_loader_splitter_basic.ipynb  02_image_loader_splitter_basic copy.ipynb  03_unstructed_tesseract_ocr.ipynb  05_text_loader.ipynb  olmocr_execise.py
07_vectorstore/: 01_chroma.ipynb  02_fiass.ipynb
08_retriever/: 01_retriever_basic.ipynb  02_retriever_advanced.ipynb
09_/: 01_rag_basic.ipynb
09_RAG/: 01_01_rag_basic.ipynb  01_02_rag_basic_sinhanESG.ipynb  01_03_rag_basic_건강검진.ipynb  02_rag_basic_exercise.ipynb  03_rag_exercise_hyundai.ipynb
10_agent_langchain/: 00_decorator.ipynb  01_agent_basic.ipynb  02_agent_binding.ipynb  03_agent_custom.ipynb  04_agent_toolkit.ipynb  discord_test.py
10_agent_langchain/agent_result/: 20251016.csv  agent.db
10_agent_langchain/schedule_toolkit/: __init__.py  toolkit.py  tools.py
11_langgraph/: 01_langgraph_basic.ipynb  01_langgraph_tool.ipynb
1_langchain_basic/: 01_langchain_basic.ipynb
chatbot_app/backend/: main.py
chatbot_app/frontend/: main.py
chatbot_app/models/: chatgpt.py
utils/: chain_util.py  custon_pdf_loader.py
