[project]
name = "langchain-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.69.0",
    "fastapi[all]>=0.118.0",
    "google-genai>=1.43.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.33",
    "pypdf>=6.1.1",
    "python-multipart>=0.0.20",
    "streamlit>=1.50.0",
]
